@@ -1,5 +1,7 @@
 Hadoop HDFS Change Log
 
+    HDFS-1502. TestBlockRecovery triggers NPE in assert. (hairong via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
